--- a/planning.qmd
+++ b/planning.qmd
@@ -13,16 +13,15 @@ What needs to be done?
 - Decide on venues and update map and colours
 - Update programme
 - Find a nice way to format session abstracts
+- Registration (google forms?)
+- Propose a session (google forms?)
+- Set up a contact us email address
 
 ## Website update process
 
 The plan is that you will be able to update the important parts of the website by only editing an excel sheet.
 
 The sheet is stored on github called `programme`.
-
-```{r}
-knitr::include_url("https://github.com/j-jayes/SEHM-23/tree/main/programme")
-```
 
 It looks like this:
 
