adding google maps link

--- a/planning.qmd
+++ b/planning.qmd
@@ -16,6 +16,7 @@ What needs to be done?
 - Registration (google forms?)
 - Propose a session (google forms?)
 - Set up a contact us email address
+- Buy a URL?
 
 ## Website update process
 
