--- a/venues.qmd
+++ b/venues.qmd
@@ -68,9 +68,11 @@ rb <- rooms %>%
 
 link = "https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
 
+logo = "https://cdn.vox-cdn.com/thumbor/KqYnd6YgxZ6yJvyBCk-heGXYEMM=/0x0:1280x800/1400x1400/filters:focal(640x400:641x401)/cdn.vox-cdn.com/uploads/chorus_asset/file/19700731/googlemaps.png"
+
 rb %>%
   mutate(location_link = glue::glue("<a href = {link}>
-                                   Google maps link
+                                   <img src='{logo}' width='50' height='50'>
                                    </a>"),
          location_link = purrr::map(location_link, gt::html)) %>% 
   select(-c(building_number, building_colour, lng, lat)) %>%
@@ -97,9 +99,12 @@ rb %>%
     ),
     locations = cells_row_groups(groups = "LUB")
   ) %>% 
-  tab_header(title = md("**Venues**"),
-             subtitle = md("**By building**")) %>% 
-  tab_options(column_labels.hidden = T)
+  tab_header(title = md("**Venues**")) %>% 
+  cols_label(room_number = "Room #",
+             room_name = "Room name",
+             description = "Directions",
+             location_link = "")
+  # tab_options(column_labels.hidden = T)
 ```
 
 
