--- a/registration.qmd
+++ b/registration.qmd
@@ -3,3 +3,6 @@ title: "Registration"
 ---
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdXbL1K09QfjblxrkeeQGeGy2RMs7WOI29NNVTn6akgH3UEDg/viewform?embedded=true" width="800" height="1600" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+
+
+If you have any questions, please feel free to [contact us here {{< fa paper-plane >}}]({{< var email.contact >}})
