--- a/paper-submit.qmd
+++ b/paper-submit.qmd
@@ -1,5 +1,6 @@
 ---
 title: "Submit an abstract"
+title-block-banner: assets/
 ---
 
 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdmYTxxGsIbcFh5UaYurttMu9BHcu3--XEjSZ-8LVTlq7gePw/viewform?embedded=true" width="800" height="2200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
